Bug 92758 - Duplication of document in CMIS after checkout/checkin
Summary: Duplication of document in CMIS after checkout/checkin
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:5.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-15 08:32 UTC by Vasily Melenchuk (CIB)
Modified: 2016-10-25 19:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vasily Melenchuk (CIB) 2015-07-15 08:32:20 UTC
After checking in document in CMIS an unexpected copy of document can be created in repository causing problems on next checkout.

Steps to reproduce and more explanations:

1. Open file from CMIS. As a example I was using file "/Yyy.txt" from Alfresco CMIS (http://cmis.alfresco.com/cmisatom user:admin, password: admin).

2. Checkout file by clicking a button in notification in top of screen. If used CMIS is Alfresco, personal working working copy of file is opened instead of original file. In my example it is called "/Yyy (Working Copy).txt"

3. Do some modifications to file 

4. Check it in back to CMIS (File->Check in). After checking in LO still have opened personal working copy opened, it does not reopen document original. In my case I have still opened "/Yyy (Working Copy).txt" and not "/Yyy.txt". This behavior seems wrong and it is an starting point for problems.

5. Do some more modifications to file and save it. As a result in repository new document is created "/Yyy (Working Copy).txt". This is not a personal working copy like before, but just an independent copy of document.

6. In case of Alfresco CMIS this leads for even more problems. Original file "/Yyy.txt" can not be checked out anymore: filename for working copy is already used. But this is a problem in Alfresco, not in LibreOffice.


System: Windows 7
LO Version: 5.1.0.0.alpha1+
Build ID: a6fed7a19befa5673403ec5fe3ab69a91475da3a
Locale: ru-RU (ru_RU)
Comment 1 Commit Notification 2015-07-17 14:52:42 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c8cd629132f5b4d879edc53911a4e4abeb8d90aa

tdf#92758: no more duplication of document in CMIS after checkin

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Vasily Melenchuk (CIB) 2015-07-17 15:02:25 UTC
It was already implemented reload of document after commit. But due to conditions it was not happen in described above case. This was fixed.