tdf#92758: no more duplication of document in CMIS after checkin

Document now is correctly reloaded after checkin, so no copy of
closed on server private working copy remains.

Change-Id: I1625bda2f960827d60018b0702447b93886043f3